p2/confs/roles/k3s_server/files/app1_deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  selector:
    app: app-one
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
spec:
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
        - name: app-one
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          volumeMounts:
              - name: app-one-config
                mountPath: /usr/share/nginx/html
      volumes:
        - name: app-one-config
          configMap:
            name: app-one
