p2/confs/roles/k3s_server/files/app3_deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  selector:
    app: app-three
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
        - name: app-three
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          volumeMounts:
              - name: app-three-config
                mountPath: /usr/share/nginx/html
      volumes:
        - name: app-three-config
          configMap:
            name: app-three
